# CollisionDetection

./: Application.cpp  Application.hpp  CMakeLists.txt  CMakeSettings.json  Geometry  Main.cpp  Matrix.hpp  Ray.hpp  Tests.cpp  TestsCollisions.cpp  TestsGeometry.cpp  Vector.hpp
collisions/: BallCollider.hpp  BoundsCollider.hpp  BrickCollider.hpp  Collider.hpp  ColliderVisitor.hpp  Collisions
framework/include/: camera.hpp  mesh.hpp  program.hpp  shader.hpp  texture.hpp  utility.hpp  window.hpp
framework/src/: camera.cpp  mesh.cpp  program.cpp  shader.cpp  texture.cpp  utility.cpp  window.cpp
geometry/: Geometry
geometry/include/: Exceptions.hpp  Matrix.hpp  Ray.hpp  Utility.hpp  Vector.cpp  Vector.hpp
geometry/src/: Matrix.hpp  Ray.hpp  Utility.hpp  Vector.hpp
geometry_/src/: Matrix.hpp
libs/single_header/: nuklear_glfw_gl3.h
objects/: cube.inl  objects.inl  sphere.inl  teapot.inl
shaders/: main.frag  main.vert
